--- a/about.css
+++ b/about.css
@@ -11,7 +11,7 @@ body {
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: black;
 }
 
 /* Style the topnav links */
