--- a/about.css
+++ b/about.css
@@ -20,7 +20,15 @@ body {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 14px;
+  text-decoration: none;
+}
+.topnav b {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 14px;
   text-decoration: none;
 }
 
