--- a/about.css
+++ b/about.css
@@ -1,11 +1,13 @@
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  color: white;
 }
 
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
 }
 
 /* Style the top navigation bar */
@@ -40,13 +42,13 @@ body {
 
 /* Style the content */
 .content {
-  background-color: #ddd;
+  background-color: #222222;
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
 }
 
 /* Style the footer */
 .footer {
-  background-color: #f1f1f1;
+  background-color: #A9A9A9;
   padding: 10px;
 }
